[gd_scene load_steps=6 format=2]

[ext_resource path="res://platformer/src/ui/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://platformer/src/ui/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://platformer/src/ui/click_sound.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PauseMenu" type="Control"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.647059 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 386.0
margin_top = 327.0
margin_right = 638.0
margin_bottom = 441.0

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 252.0
margin_bottom = 42.0
text = "继续"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 252.0
margin_bottom = 114.0
text = "返回主菜单"

[node name="ClickSound" parent="." instance=ExtResource( 3 )]

[node name="Transitions" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/Show = SubResource( 2 )

[connection signal="visibility_changed" from="." to="." method="_on_PauseMenu_visibility_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
